--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "reset": "node ./demo/resetDB.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "concurrently \"nodemon server.js\" \"cd Client && npm start\"",
-    "render-postbuild": "cd Client && yarn install && yarn build"
+    "render-postbuild": "cd Client && yarn install && yarn run build"
   },
   "engines": {
     "node": ">=18"
