--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "nodemon server.js",
     "reset": "node ./demo/resetDB.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "concurrently \"nodemon server.js\" \"cd Client && npm start\"",
+    "dev": "concurrently \"nodemon server.js\" \"cd Client && npm run dev\"",
     "render-postbuild": "cd Client && yarn install && yarn run build"
   },
   "engines": {
@@ -24,6 +24,7 @@
     "mongoose": "^8.2.0"
   },
   "devDependencies": {
+    "concurrently": "^8.2.2",
     "nodemon": "^3.1.0"
   }
 }
